syntax = "proto3";


import "google/protobuf/wrappers.proto";
import "google/protobuf/empty.proto";

option csharp_namespace = "CodeDesignPlus.Net.Microservice.Users.gRpc.Test";

package Users;


service Users {
  rpc AddTenantToUser (stream AddTenantRequest) returns (google.protobuf.Empty);
  rpc AddGroupToUser (stream AddGroupRequest) returns (google.protobuf.Empty);
}

message AddGroupRequest {
  string Id = 1;
  string Role = 2;
}

message AddTenantRequest {
  string Id = 1;
  Tenant Tenant = 2;
}

message Tenant {
  string Id = 1;
  string Name = 2;
}

